--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="copied">Скопировано!</string>
     <string name="about">О программе</string>
     <string name="aboutmsg">GeoReverse by maximko\n[xmpp/mail]: me@maximko.org\nGeodata by OpenStreetMap.org under CC-BY-SA 2.0</string>
+    <string name="wait">Подождите...</string>
+    <string name="loading">Загрузка данных</string>
+    <string name="jsonloading">Загрузка JSON данных</string>
 </resources>
